# mallow-jellybean

./: .clinerules  .gitignore  Anchor.toml  Cargo.toml  README.md  overview.md  package.json  plan.md  pnpm-lock.yaml  validator.cjs
.cursor/rules/: project.mdc
.github/: .env  file-filters.yml
.github/workflows/: deploy-program.yml  main.yml  publish-js-client.yml
clients/js/: .eslintrc.js  .prettierrc.json  README.md  fixup-server.sh  package.json  pnpm-lock.yaml  tsconfig-base.json  tsconfig-cjs.json  tsconfig-test.json  tsconfig.json
clients/js/build-scripts/: dev-flag.ts  getBaseConfig.ts  package.json  pnpm-lock.yaml  tsup.config.library.ts  tsup.config.package.ts
clients/js/mallow-jellybean/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  tsup.config.node.ts  tsup.config.package.ts  typedoc.core.json
clients/js/src/: closeGumballMachine.ts  constants.ts  createGumballGuard.ts  createGumballMachine.ts  draw.ts  hooked.ts  index.ts  plugin.ts  route.ts  sellItem.ts  updateGumballGuard.ts
clients/js/test/: _setup.ts  addCoreAsset.test.ts  addNft.test.ts  addTokens.test.ts  approveAddItem.test.ts  cancelAddCoreAssetRequest.test.ts  cancelAddNftRequest.test.ts  claimCoreAsset.test.ts  claimNft.test.ts  claimTokens.test.ts  createGumballMachine.test.ts  delete.test.ts  draw.test.ts  initializeGumballMachine.test.ts  manageBuyBackFunds.test.ts  removeCoreAsset.test.ts  removeNft.test.ts  (+10 more)
clients/rust/: Cargo.toml  README.md
clients/umi/: README copy.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
configs/: codama.cjs  kinobi.cjs  shank.cjs  validator.cjs
configs/program-scripts/: build.sh  dump.sh
idls/: candy_guard.json  gumball_guard.json  mallow_gumball.json
program/: Cargo.toml  README.md  idl.json  keypair.json  mallow_jellybean.json
program/src/: constants.rs  errors.rs  lib.rs
program/src/events/: claim_item_event.rs  draw_item_event.rs  mod.rs
program/src/instructions/: add_core_item.rs  claim_core_item.rs  close_jellybean_machine.rs  draw.rs  end_sale.rs  initialize.rs  mod.rs  remove_core_item.rs  set_mint_authority.rs  start_sale.rs  update_settings.rs  withdraw.rs
program/src/processors/: add_item.rs  claim_item.rs  mod.rs  remove_item.rs
program/src/state/: jellybean_machine.rs  mod.rs  unclaimed_prizes.rs
program/src/utils/: checks.rs  math.rs  mod.rs  transfer.rs
programs/gumball-guard/: Anchor.toml  README.md
programs/gumball-guard/program/: Cargo.toml
programs/gumball-guard/program/src/: lib.rs  utils.rs
programs/gumball-guard/program/src/guards/: nft_gate.rs  sol_payment.rs  token2022_payment.rs  token_payment.rs
programs/gumball-guard/program/src/instructions/: close_gumball_machine.rs  update.rs
programs/gumball-guard/program/src/state/: gumball_guard.rs
programs/mallow-gumball/: README.md
programs/mallow-jellybean/: Anchor.toml  README.md
programs/utils/: Cargo.toml
scripts/: generate-clients.mjs  generate-idls.mjs  link-rust-version.mjs  utils.mjs
scripts/ci/: set-env.mjs
scripts/client/: publish-umi.mjs  test-umi.mjs
scripts/program/: build.mjs
(+129 files in other folders)
