[package]
name = "mallow_jellybean"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "J3LLYcm8V5hJRzCKENRPW3yGdQ6xU8Nie8jr3mU88eqq"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed", "event-cpi"]}
anchor-spl = {version = "0.29.0"}
arrayref = ">=0.3.6"
solana-program = "~1.18"
mpl-core = { version= ">=0.10.1"}