[package]
name = "gumball-guard"
version = "0.3.0"
description = "mallow Gumball Guard: programmatic access control for mallow Gumball."
authors = ["mallow Developers <dev@mallow.art>"]
repository = "https://github.com/mallow-labs/mallow-gumball"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
arrayref = ">=0.3.6"
gumball-guard-derive = { path = "../macro", version = "0.2.0" }
mallow-gumball = { path = "../../mallow-gumball/program", features = ["cpi"] }
mpl-token-metadata = ">=5.1.0"
mpl-core = { version= ">=0.9.1"}
solana-program = ">=1.18.2"
spl-token = ">=3.5.0"
spl-associated-token-account = {version = ">=1.0.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = ">=1.0.0", features = ["no-entrypoint"] }
